<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Name Boards</string>
    <string name="add_board">Add Board</string>
    <string name="empty_hint">No boards yet.\nTap + to add your first one!</string>
    <string name="hint_title">Board name</string>
    <string name="label_priority">Priority (stars)</string>
    <string name="label_duration">Approx. Duration</string>
</resources>
